# BioML-Workbench

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Agent_instructions.md  Architecture.md  CHANGELOG.md  Dockerfile  Makefile  README  README.md  ROADMAP.md  docker-compose.yml  environment.yml  impementation_order.md  portfolio_blueprint.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml
docs/: configuration.md  getting_started.md  phase_0.md  phase_1.md  phase_2.md  phase_3.md  phase_4.md  phase_5.md  phase_6.md  phase_7.md  phase_8.md  phase_9.md  phase_c_labels.md  phase_d_single_cell_analysis.md  phase_e_plots.md  phase_f_supervised_models.md
src/bioml_workbench/: __init__.py  analysis.py  api.py  benchmark.py  cli.py  configuration.py  configuration_manager.py  dashboard.py  experiment.py  feature_engineering.py  inference.py  logging.py  ml.py  models.py  pipeline.py  preprocessing.py  workflow.py
src/bioml_workbench/data/: __init__.py  annotations.py  dataset.py  tenx.py
src/bioml_workbench/single_cell/: __init__.py  clustering.py  cohorts.py  comparison.py  differential_expression.py  expression.py  markers.py  plots.py  preprocessing.py  qc.py  supervised.py
src/bioml_workbench/utils/: __init__.py  cache_manager.py  exceptions.py  file_manager.py  seeding.py  timer.py
tests/: test_analysis.py  test_api.py  test_cache_manager.py  test_cohorts.py  test_comparison_export.py  test_configuration.py  test_configuration_manager.py  test_dashboard.py  test_data_engineering.py  test_differential_expression.py  test_exceptions.py  test_experiment_runs.py  test_feature_engineering.py  test_file_manager.py  test_inference.py  test_label_alignment.py  test_logging.py  test_marker_genes.py  test_ml_baselines.py  test_models.py  test_pipeline.py  test_preprocessing.py  test_seeding.py  test_single_cell_analysis.py  test_single_cell_plots.py  test_supervised_workflow.py  test_tenx_loader.py  test_timer.py  test_workflow.py
ui/: streamlit_app.py
