[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bioml-workbench"
version = "0.1.0"
description = "Production-grade computational biology and MLOps platform."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "BioML Workbench contributors" }]
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["black>=24.0", "mypy>=1.10", "pytest>=8.0", "ruff>=0.5", "types-PyYAML>=6.0"]

[project.scripts]
bioml-workbench = "bioml_workbench.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py39"
extend-exclude = ["docs"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["B008"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
files = ["src"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
